intel-graphics-compiler (2.1.13-1) UNRELEASED; urgency=medium

  * New upstream release.
  * watch: Updated.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 03 Dec 2024 09:34:15 +0200

intel-graphics-compiler (1.0.17791.18-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 03 Dec 2024 09:30:11 +0200

intel-graphics-compiler (1.0.17791.16-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 05 Nov 2024 09:46:20 +0200

intel-graphics-compiler (1.0.17537.20-2) unstable; urgency=medium

  * Enable a build flag to link to the external spirv translator.
    (LP: #2085370)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 01 Nov 2024 15:41:28 +0200

intel-graphics-compiler (1.0.17537.20-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 10 Sep 2024 20:05:35 +0300

intel-graphics-compiler (1.0.17537.16-1) unstable; urgency=medium

  * New upstream release.
  * patches: Drop upstreamed patch.

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 07 Sep 2024 10:36:59 +0300

intel-graphics-compiler (1.0.17384.9-1) unstable; urgency=medium

  * New upstream release.
  * patches: Fix build with gcc-14.
  * rules: Override dh_dwz, FTBFS.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 14 Aug 2024 16:49:44 +0300

intel-graphics-compiler (1.0.17193.2-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 27 Jun 2024 10:04:00 +0300

intel-graphics-compiler (1.0.16510.4-1) unstable; urgency=medium

  * New upstream release.
  * control: Bump build-dep on intel-vc-intrinsics.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 16 Apr 2024 21:10:43 +0300

intel-graphics-compiler (1.0.15468.25-2) unstable; urgency=medium

  * unset-fortify-source.diff: Don't try to redefine _FORTIFY_SOURCE,
    unset it first.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 29 Feb 2024 15:35:05 +0200
