@@ -2,6 +2,7 @@ intel-graphics-compiler (2.1.13-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * watch: Updated.
+  * patches: Refreshed.
 
  -- Timo Aaltonen <tjaalton@debian.org>  Tue, 03 Dec 2024 09:34:15 +0200
 
